# webinteractions

./: .coveralls.yml  .gitignore  README.md  setup.cfg
.circleci/: config.yml
docs/: conf.py  index.rst  modules.rst  webinteractions.remote_access.rst  webinteractions.rst  webinteractions.server_client.rst  webinteractions.server_client.xmlrpc_wrapper.rst
src/webinteractions.egg-info/: PKG-INFO  SOURCES.txt
src/webinteractions/server_client/: tcp_socket_server.py  udp_socket_server.py  utils.py
src/webinteractions/server_client/xmlrpc_wrapper/: server.py
test/: .coverage  setup.py  setup_for_tests.sh  start_tcp_synchronous.py  start_tcp_threaded.py  start_udp_synchronous.py  start_udp_threaded.py  start_xmlrpc.py  test_all.py  test_http.py  test_tcp_socket.py  test_udp_socket.py  test_xmlrpc.py
