[metadata]
name=webinteractions
version=0.0.3
description= A Package created to provide APIs for different web related python libraries like socketserver, xmlrpc etc.
long_description=README.md
long_description_content_type=text/markdown

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
install_requires=
    importlib
    python_version >= "3.0"